fix spacing between panels

--- a/src/global.css
+++ b/src/global.css
@@ -59,8 +59,10 @@ body {
   min-height: 100%;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: var(--se-gap);
   margin: 0;
   padding: var(--se-gap);
   box-sizing: border-box;
